// Generate code
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./scratch/grpc/proto/greeter.proto

syntax = "proto3";

option go_package = "github.com/practice/scratch/grpc";

package greeter;

service Greeter {
  // Unary RPC
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  
  // Server streaming RPC
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}